--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -15,7 +15,9 @@
 </head>
 
 <body>
-	<div n:foreach="$flashes as $flash" class="flash {$flash->type}">{$flash->message}</div>
+	<div n:foreach="$flashes as $flash" class="alert alert-{$flash->type}">
+		{$flash->message}
+	</div>
 
 	{include content}
 
